--- a/data-modeling/docker/docker-compose.yml
+++ b/data-modeling/docker/docker-compose.yml
@@ -2,7 +2,15 @@ version: "3.8"
 
 services:
   cassandra:
-    image: cassandra:latest
+    image: cassandra:3.11.9
     container_name: cassandra
     ports:
       - '6000:9042'
+  postgres:
+    image: postgres:13.1
+    container_name: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: "let'sgo"
+    ports:
+      - '7000:5432'
