--- a/Data_Warehouse_Project/dwh.cfg
+++ b/Data_Warehouse_Project/dwh.cfg
@@ -1,12 +1,21 @@
+[AWS]
+KEY=AKIAXV53R5BD7A43SMVG
+SECRET=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
+
 [CLUSTER]
-HOST=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_PORT=
+DWH_CLUSTER_TYPE=multi-node
+DWH_NUM_NODES=4
+DWH_NODE_TYPE=dc2.large
+DWH_REGION=us-west-2
+
+DWH_CLUSTER_IDENTIFIER=dwhCluster
+DWH_DB=dwh
+DWH_DB_USER=dwhuser
+DWH_DB_PASSWORD=qazwsxedC1
+DWH_PORT=5439
 
 [IAM_ROLE]
-ARN=''
+ARN=dwhRole
 
 [S3]
 LOG_DATA='s3://udacity-dend/log-data'
