--- a/Data_Warehouse_Project/dwh.cfg
+++ b/Data_Warehouse_Project/dwh.cfg
@@ -1,6 +1,6 @@
 [AWS]
-KEY=AKIAXV53R5BD7A43SMVG
-SECRET=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
+KEY=
+SECRET=
 
 [CLUSTER]
 DWH_CLUSTER_TYPE=multi-node
