--- a/flights-analytics/requirements.txt
+++ b/flights-analytics/requirements.txt
@@ -1,11 +1,5 @@
-jupyterlab==3.0.1
-ipython-sql==0.4.0
-sqlalchemy==1.3.22
-psycopg2-binary==2.8.6
-boto3==1.16.56
-pandas==1.2.0
-tox==3.21.1
-matplotlib==3.3.3
-mrjob==0.7.4
-
-
+jupyterlab==3.0.6
+pyspark==3.0.1
+numpy==1.20.0
+pandas==1.2.1
+matplotlib==3.3.4
