--- a/docker/airflow/docker-compose.yaml
+++ b/docker/airflow/docker-compose.yaml
@@ -39,7 +39,7 @@
 version: '3'
 x-airflow-common:
   &airflow-common
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.0.1rc}
+  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:master-python3.8}
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -50,9 +50,9 @@ x-airflow-common:
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
   volumes:
-    - ./dags:/opt/airflow/dags
-    - ./logs:/opt/airflow/logs
-    - ./plugins:/opt/airflow/plugins
+    - ${AIRFLOW_WORKSPACE}/dags:/opt/airflow/dags
+    - ${AIRFLOW_WORKSPACE}/logs:/opt/airflow/logs
+    - ${AIRFLOW_WORKSPACE}/plugins:/opt/airflow/plugins
   user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
   depends_on:
     redis:
