Redefine AWS constant variables

--- a/data-modeling-aws-data-warehouse/sample-dwh.cfg
+++ b/data-modeling-aws-data-warehouse/sample-dwh.cfg
@@ -1,18 +1,18 @@
 [AWS]
 KEY=
 SECRET=
+REGION=<aws_region>
 
-[CLUSTER]
-REGION=<cluster_region>
+[AWS_REDSHIFT_CLUSTER]
 TYPE=multi-node
 NAME=<cluster_name>
 NUM_NODES=<cluster_number_of_nodes>
 NODE_TYPE=dc2.large
 
-DB=<database_name>
-DB_USER=<database_user>
-DB_PASSWORD=<password>
-DB_PORT=<database_port>
+SCHEMA=<database_name>
+SCHEMA_USER=<database_user>
+SCHEMA_PASSWORD=<database_password>
+SCHEMA_PORT=<database_port>
 
 [IAM_ROLE]
 ARN=<iam_role_arn_name>
